--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
 				<h1 class="app__name">Chess Blunder Trainer App</h1>
 				<p class="app__description">Replay blunders from your own chess games to improve your chess skills!</p>
 				<div class="app__buttons app__buttons--desktop">
-					<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
+					<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
 						<img src="assets/google-play-badge.png" alt="Get on Google Play">
 					</a>
 				</div>
 			</div>
 		</header>
 		<div class="app__buttons app__buttons--mobile container">
-			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
+			<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
 			</a>
 		</div>
@@ -95,12 +95,12 @@
 				</ol>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
-				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
 				</a>
 			</div>
 			<div class="app__buttons app__buttons--mobile container">
-				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
 				</a>
 			</div>
@@ -129,12 +129,12 @@
 				<p>Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
 			</div>
 			<div class="app__buttons app__buttons--desktop">
-				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
 				</a>
 			</div>
 			<div class="app__buttons app__buttons--mobile container">
-				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
+				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Mobile')" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
 				</a>
 			</div>
@@ -196,12 +196,11 @@
 	</script>
 
 	<script>
-		function trackLinkClick(linkName) {
-			gtag('event', 'click', {
-				'event_category': 'Link Click',
+		function trackPlayStoreLinkClick(linkName) {
+			gtag('event', 'link click', {
 				'event_label': linkName,
 				'transport_type': 'beacon',
-				'event_callback': function () { document.location = "https://www.chessblundertrailer.com"; }
+				'event_callback': function () { document.location = "https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer"; }
 			});
 		}
 	</script>
