--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 			gtag('event', 'link click', {
 				'event_label': linkName,
 				'transport_type': 'beacon',
-				'event_callback': function () { document.location = "https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer"; }
+				'event_callback': function () { document.location = "https://www.chessblundertrainer.com";}
 			});
 		}
 	</script>
