--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 				},
 				{
 					'version': 'v0.2.1',
-					'notes': 'Display of player names and game date; bugfix of icon button label; updated app logo',
+					'notes': 'Display of player names and game date; bugfix of icon button label; update of app logo',
 				},
 				{
 					'version': 'v0.2.0',
