--- a/index.html
+++ b/index.html
@@ -299,11 +299,11 @@
 				},
 				{
 					'version': 'v0.3.0',
-					'notes': 'Major improvement of interaction with Stockfish chess engine to enable continous background analysis',
+					'notes': 'Major improvement of interaction with chess engine to enable continous background analysis',
 				},
 				{
 					'version': 'v0.2.10',
-					'notes': 'Adjustment option for small screen sizes; display of Stockfish depth; various minor improvements',
+					'notes': 'Adjustment option for small screen sizes; display of chess engine analysis depth; various minor improvements',
 				},
 				{
 					'version': 'v0.2.9',
