--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			const releaseNotes = [
 				{
 					'version': 'v1.3.2',
-					'notes': 'Introduction of modes for setting game set structure: by play date, import date or as single set',
+					'notes': 'Introduction of different modes for segmentation of imported games: by play date, import date or as single set',
 				},
 				{
 					'version': 'v1.3.1',
