avoid link to index

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</label>
 
 	<ul class="menu__box">
-		<li><a class="menu__item" href="index.html">Home</a></li>
+		<li><a class="menu__item" href="#header">Home</a></li>
 		<li><a class="menu__item" href="#screenshots">Screenshots</a></li>
 		<li><a class="menu__item" href="#how">How it works</a></li>
 		<li><a class="menu__item" href="#avoid">Avoid Blunders</a></li>
@@ -47,7 +47,7 @@
 
 <body>
 	<main>
-		<header class="app__header container">
+		<header id="header" class="app__header container">
 			<div class="app__logo-wrapper"> <img class="app__logo" src="content/image/logo_app.png" alt="Chess Blunder Trainer App"></div>
 			<div class="app__infos">
 				<h1 class="app__name">Chess Blunder Trainer App</h1>
@@ -160,14 +160,6 @@
 					&mdash; Template by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
 					&mdash; Powered by <a href="https://t3mpl.n4no.com/" target="_blank" title="T3MPL Editor">T3MPL</a>
 				</p>
-				<ul class="footer__links">
-					<li class="footer__link">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="footer__link">
-						<a href="mailto:chessblundertrainer@gmail.com">Contact</a>
-					</li>
-				</ul>
 			</div>
 		</div>
 	</footer>
