--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="assets/style.css" />
 	<link rel="stylesheet" href="assets/menu.css" />
 	<link rel="stylesheet" href="assets/tobi.css" />
+	<link rel="canonical" href="https://www.chessblundertrainer.com/" />
 
 </head>
 <!-- Google tag (gtag.js) -->
