reduced length of title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Chess Blunder Trainer - Free App to Generate Personalized Puzzles from your Chess Games</title>
-
+	<title>Chess Blunder Trainer App - Puzzles from your Chess Games</title>
 	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles! Improve your chess skills and avoid repeating past mistakes!" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="icon" href="content/image/logo_app_favicon.png" />
