--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html dir="auto" lang="en">
 
 <head>
+	<script
+			async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K">
+			</script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-H2MNTZRY5K');
+	</script>
 	<meta charset="UTF-8" />
 	<title>Chess Blunder Trainer App - Puzzles from your Chess Games</title>
 	<meta name="description" content="Free app to replay blunders from your own chess games as personalized puzzles! Improve your chess skills and avoid repeating past mistakes!" />
@@ -11,6 +20,7 @@
 	<meta property="og:title" content="Chess Blunder Trainer App" />
 	<meta property="og:description" content="Free app to replay blunders from your own chess games as personalized puzzles! Improve your chess skills and avoid repeating past mistakes!" />
 	<meta property="og:image" content="https://www.chessblundertrainer.com/content/image/logo_app.png" />
+	<meta property="og:url" content="https://www.chessblundertrainer.com/" />
 
 	<link rel="stylesheet" href="assets/style.css" />
 	<link rel="stylesheet" href="assets/menu.css" />
@@ -19,14 +29,7 @@
 
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K"></script>
-<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag() { dataLayer.push(arguments); }
-	gtag('js', new Date());
 
-	gtag('config', 'G-H2MNTZRY5K');
-</script>
 <div class="hamburger-menu">
 	<input id="menu__toggle" type="checkbox" />
 	<label class="menu__btn" for="menu__toggle">
@@ -131,7 +134,7 @@
 				<p>This chess software was developed as a personal project by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store. Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
 				<p>Special thanks to <a href="https://sandeducator.dev/">Alex Baker</a>, who has published a chess logic package <a href="https://pub.dev/packages/bishop">bishop</a> and a chessboard visualization package <a href="https://pub.dev/packages/squares">squares</a> that are used by the app.</p>
 			</div>
-			
+
 			<div class="app__buttons app__buttons--desktop">
 				<a href="https://play.google.com/store/apps/details?id&#x3D;com.cbt.chess_blunder_trainer" onclick="trackPlayStoreLinkClick('Visit Play Store Desktop')" class="app__button-play" target="_blank" title="Get on Google Play">
 					<img src="assets/google-play-badge.png" alt="Get on Google Play">
