--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html dir="auto" lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
 	<script
-			async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K">
-			</script>
+		async src="https://www.googletagmanager.com/gtag/js?id=G-H2MNTZRY5K">
+	</script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
@@ -26,9 +27,7 @@
 	<link rel="stylesheet" href="assets/menu.css" />
 	<link rel="stylesheet" href="assets/tobi.css" />
 	<link rel="canonical" href="https://www.chessblundertrainer.com/" />
-
 </head>
-<!-- Google tag (gtag.js) -->
 
 <div class="hamburger-menu">
 	<input id="menu__toggle" type="checkbox" />
@@ -37,14 +36,14 @@
 	</label>
 
 	<ul class="menu__box">
-		<li><a class="menu__item" href="#header">Home</a></li>
-		<li><a class="menu__item" href="#screenshots">Screenshots</a></li>
-		<li><a class="menu__item" href="#how">How it works</a></li>
-		<li><a class="menu__item" href="#avoid">Avoid Blunders</a></li>
-		<li><a class="menu__item" href="#about">About</a></li>
-		<li><a class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
-		<li><a class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
-		<li><a class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
+		<li><a title="Chess Blunder Trainer" class="menu__item" href="#header">Home</a></li>
+		<li><a title="How the app looks like" class="menu__item" href="#screenshots">Screenshots</a></li>
+		<li><a title="How the app works" class="menu__item" href="#how">How it works</a></li>
+		<li><a title="Strategies to avoid mistakes in chess" class="menu__item" href="#avoid">Avoid Blunders</a></li>
+		<li><a title="About the chess software" class="menu__item" href="#about">About</a></li>
+		<li><a title="Email of the developer" class="menu__item" href="mailto:chessblundertrainer@gmail.com">Contact</a></li>
+		<li><a title="Github" class="menu__item" href="https://github.com/Mercutio1243/chessblundertrainerapp">Github</a></li>
+		<li><a title="Privacy" class="menu__item" href="https://www.privacypolicies.com/live/c6d58317-e1ab-4292-8f11-71ea6ce60474">Privacy</a></li>
 	</ul>
 </div>
 
@@ -73,16 +72,16 @@
 			</div>
 			<div class="app__screenshots-wrapper container-desktop">
 				<div class="app__screenshots-list">
-					<a href="content/image/chess_blunder_trainer_app_analysis.jpg" class="lightbox">
+					<a title="How to use the software" href="content/image/chess_blunder_trainer_app_analysis.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_app_analysis.jpg" class="app__screenshot" alt="Use the chess blunder trainer to learn from your past blunders" />
 					</a>
-					<a href="content/image/chess_blunder_trainer_software_puzzles.jpg" class="lightbox">
+					<a title="How to avoid blunders by creating puzzles" href="content/image/chess_blunder_trainer_software_puzzles.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_software_puzzles.jpg" class="app__screenshot" alt="Avoid repeating your past blunders" />
 					</a>
-					<a href="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="lightbox">
+					<a title="How to improve chess skills with the app" href="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_tool_import_your_games.jpg" class="app__screenshot" alt="Import offline games and online games from chess.com or Lichess" />
 					</a>
-					<a href="content/image/chess_blunder_trainer_import_blunders_chesscom.jpg" class="lightbox">
+					<a title="How to prevent mistakes by reviewing past mistakes" href="content/image/chess_blunder_trainer_import_blunders_chesscom.jpg" class="lightbox">
 						<img src="content/image/chess_blunder_trainer_import_blunders_chesscom.jpg" class="app__screenshot" alt="Import offline games and online games from chess.com or Lichess" />
 					</a>
 				</div>
@@ -131,8 +130,8 @@
 		<section id="about" class="app__fulldescription app__section container">
 			<h2 class="app__section-title">About</h2>
 			<div class="app__fulldescription-content">
-				<p>This chess software was developed as a personal project by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store. Please reach out via <a href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
-				<p>Special thanks to <a href="https://sandeducator.dev/">Alex Baker</a>, who has published a chess logic package <a href="https://pub.dev/packages/bishop">bishop</a> and a chessboard visualization package <a href="https://pub.dev/packages/squares">squares</a> that are used by the app.</p>
+				<p>This chess software was developed as a personal project by Thomas Koeppen. The tool is available as a free Android app in the Google Play Store. Please reach out via <a title="Email address of app developer" href="mailto:chessblundertrainer@gmail.com">chessblundertrainer@gmail.com</a> with any feedback or questions!</p>
+				<p>Special thanks to <a title="Developer of third party packages use in the chess app" href="https://sandeducator.dev/">Alex Baker</a>, who has published the chess logic package <a title="Flutter bishop package" href="https://pub.dev/packages/bishop" >bishop</a> and the chessboard visualization package <a title="Flutter squares package" href="https://pub.dev/packages/squares">squares</a> that are used by the app.</p>
 			</div>
 
 			<div class="app__buttons app__buttons--desktop">
@@ -160,8 +159,8 @@
 			<div class="footer__container">
 				<p class="footer__love">
 					<script>document.write('&copy;' + (new Date()).getFullYear());</script><noscript>&copy;2024</noscript> All rights reserved
-					&mdash; Template by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
-					&mdash; Powered by <a href="https://t3mpl.n4no.com/" target="_blank" title="T3MPL Editor">T3MPL</a>
+					&mdash; Template by <a title="Template" href="https://www.sandoche.com" target="_blank">Sandoche</a>
+					&mdash; Powered by <a title="Editor" href="https://t3mpl.n4no.com/" target="_blank" title="T3MPL Editor">T3MPL</a>
 				</p>
 			</div>
 		</div>
