--- a/index.html
+++ b/index.html
@@ -211,6 +211,22 @@
 		document.addEventListener('DOMContentLoaded', function () {
 			const releaseNotes = [
 				{
+					'version': 'v1.5.2',
+					'notes': 'Improvement of chess engine stability',
+				},
+				{
+					'version': 'v1.5.1',
+					'notes': 'Introduction of direct import of PGN data from clipboard; minor fixes and improvements',
+				},
+				{
+					'version': 'v1.5.0',
+					'notes': 'Introduction of move assessment icons on "Improve" page',
+				},
+				{
+					'version': 'v1.4.1',
+					'notes': 'Minor fixes and improvements',
+				},
+				{
 					'version': 'v1.4.0',
 					'notes': 'Introduction of separate blunder sensitivity options per time control mode',
 				},
