--- a/index.html
+++ b/index.html
@@ -211,6 +211,46 @@
 		document.addEventListener('DOMContentLoaded', function () {
 			const globalReleaseNotes = [
 				{
+					'version': 'v1.9.0',
+					'notes': 'Improvement of feedback requests',
+				},
+				{
+					'version': 'v1.8.3',
+					'notes': 'Minor fixes and improvements',
+				},
+				{
+					'version': 'v1.8.2',
+					'notes': 'Minor fixes and improvements',
+				},
+				{
+					'version': 'v1.8.1',
+					'notes': 'Introduction of first finished import dialog',
+				},
+				{
+					'version': 'v1.8.0',
+					'notes': 'Option for non-intrusive weekly notification w/o sound or vibration',
+				},
+				{
+					'version': 'v1.7.1',
+					'notes': 'Improvement of responsive design',
+				},
+				{
+					'version': 'v1.7.0',
+					'notes': 'Introduction of How-To page; introduction of usage statistics page',
+				},
+				{
+					'version': 'v1.6.3',
+					'notes': 'Minor fixes and improvements',
+				},
+				{
+					'version': 'v1.6.2',
+					'notes': 'Various housekeeping',
+				},
+				{
+					'version': 'v1.6.1',
+					'notes': 'Update of chess engine',
+				},
+				{
 					'version': 'v1.6.0',
 					'notes': 'Introduction of weekly training streak feature',
 				},
